--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <head>Lista de alunos da FS08</head>
     <li>
       <a
         href="https://www.linkedin.com/in/lucas-guimar%C3%A3es-49729414a/"
